syntax = "proto3";

package main;

service GraphDispatcher {
  rpc broadcasting(stream BroadMessageRequest) returns (stream BroadMessageResponse) {} 
  rpc addNode(AddNodeRequest) returns (GraphResponse)  {}
  rpc addEdge(AddEdgeRequest) returns (GraphResponse)  {}
} 

message BroadMessageRequest {
  string message = 1;
}

message BroadMessageResponse {
  string message = 1;
}

message GraphResponse {
  string graph = 1;
}

message AddNodeRequest {
  string key = 1;
}

message AddEdgeRequest {
  string key = 1;
}